# lion

./: .gitignore  Cargo.toml  Dockerfile  Makefile.toml  README.md  containerfile  package-lock.json  package.json  tailwind.config.js
.github/workflows/: cd.yml  ci.yml  ci_cd.yml
app/: next.config.js  package.json  tsconfig.json
app/components/: LanguageSelector.tsx  ResumeTimeline.tsx  SkillTile.tsx
app/components/menus/: TopMenu.tsx
app/pages/: _app.tsx  index.tsx
app/types/: IResumeElement.ts  ResumeElementType.ts
locales/: de.json  de.toml  en.json  en.toml
next-app/: next.config.js  package.json  tailwind.config.js
next-app/assets/: resume.json
next-app/components/: LanguageSelector.tsx
next-app/components/darkModeToggle/: darkModeToggleComponent.tsx
next-app/components/languageSelector/: languageSelectorComponent.tsx
next-app/components/layouts/: BasicLayout.tsx
next-app/components/menus/: TopMenu.tsx
next-app/components/resumeTimeline/: index.ts  resumeTimelineComponent.tsx
next-app/enumerations/: index.ts  resumeElementType.ts
next-app/pages/: _app.tsx  index.tsx
next-app/styles/: global-styles.css
next-app/types/: IResumeElement.ts  index.ts  resumeElement.ts
src/: api.rs  app.rs  extractors.rs  fallback.rs  filters.rs  handlers.rs  lib.rs  main.rs
src/components/: atoms.rs  button.rs  mod.rs  molecules.rs  organisms.rs  pages.rs  timeline.rs  top_nav.rs
src/pages/: home.rs
static/: manifest.json
style/: tailwind.css
styles/: main.css
templates/atoms/: project_card.html  timeline_element.html
templates/molecules/: timeline.html
templates/organisms/: top_nav.html
templates/pages/: base_layout.html  index.html  not_found.html
(+20 files in other folders)
