[package]
name = "lion"
description = "This is the crate for my personal website"
version = "0.1.0"
authors = ["robin-thoene"]
edition = "2024"

[dependencies]
askama = { version = "0.12.1", features = ["with-axum"] }
askama_axum = "0.4.0"
axum = "0.8.1"
axum-extra = { version = "0.10.0", features = ["cookie"] }
rust-i18n = "3.1.3"
tokio = { version = "1.43.0", features = ["full"] }
tower-http = { version = "0.6.2", features = ["fs", "set-header"] }
